--- a/index.html
+++ b/index.html
@@ -26,32 +26,34 @@
     <header class="page-header">
       <div class="container">
         <a href="index.html" class="logo-link"
-        ><span class="logo-web">WEB</span
-        ><span class="logo-studio">STUDIO</span></a
-      >
-      <nav class="nav-menu">
-        <ul class="nav-menu-list">
-          <li class="list-item">
-            <a class="navi-link current" href="./index.html">Studio</a>
-          </li>
-          <li class="list-item">
-            <a class="navi-link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="list-item"><a class="navi-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address-menu">
-        <ul class="address-menu-list">
-          <li class="list-item">
-            <a href="mailto:info@devstudio.com" class="contmail"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="list-item">
-            <a href="tel:+11(000)1111111" class="contnumb">+11(000)111-11-11</a>
-          </li>
-        </ul>
-      </address>
+          ><span class="logo-web">WEB</span
+          ><span class="logo-studio">STUDIO</span></a
+        >
+        <nav class="nav-menu">
+          <ul class="nav-menu-list">
+            <li class="list-item">
+              <a class="navi-link current" href="./index.html">Studio</a>
+            </li>
+            <li class="list-item">
+              <a class="navi-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="list-item"><a class="navi-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address-menu">
+          <ul class="address-menu-list">
+            <li class="list-item">
+              <a href="mailto:info@devstudio.com" class="contmail"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="list-item">
+              <a href="tel:+11(000)1111111" class="contnumb"
+                >+11(000)111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
 
@@ -61,7 +63,7 @@
         <div class="container">
           <h1 class="hero-text">Effective Solutions<br />for Your Business</h1>
 
-        <button type="button" class="button-order">Order&nbsp;Service</button>
+          <button type="button" class="button-order">Order&nbsp;Service</button>
         </div>
       </section>
 
@@ -71,6 +73,12 @@
           <h2 class="visually-hidden">Our values</h2>
           <ul class="values-list">
             <li class="list-item">
+              <div class="list-svg">
+                <svg class="values-icons" width="64" height="64">
+                  <use href="./img/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
+
               <h3 class="h3-values">Strategy</h3>
               <p class="p-aboutus">
                 Our goal is to identify the business problem to walk away with
@@ -78,6 +86,11 @@
               </p>
             </li>
             <li class="list-item">
+              <div class="list-svg">
+                <svg class="values-icons" width="64" height="64">
+                  <use href="./img/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="h3-values">Punctuality</h3>
               <p class="p-aboutus">
                 Bring the key message to the brand's audience for the best price
@@ -85,6 +98,11 @@
               </p>
             </li>
             <li class="list-item">
+              <div class="list-svg">
+                <svg class="values-icons" width="64" height="64">
+                  <use href="./img/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="h3-values">Diligence</h3>
               <p class="p-aboutus">
                 Research and confirm brands that present the strongest digital
@@ -92,6 +110,11 @@
               </p>
             </li>
             <li class="list-item">
+              <div class="list-svg">
+                <svg class="values-icons" width="64" height="64">
+                  <use href="./img/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="h3-values">Technologies</h3>
               <p class="p-aboutus">
                 Design practice focused on digital experiences. We bring forth a
@@ -148,6 +171,36 @@
               <div class="text-under-team-list">
                 <h3 class="h3-studio">Mark&nbsp;Guerrero</h3>
                 <p class="our-team-p">Product&nbsp;Designer</p>
+                <ul class="sotial-list">
+                  <li class="sotial-item">
+                    <a href="https://instagram.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-instagram-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sotial-item">
+                    <a href=" twitter.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-twitter-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sotial-item">
+                    <a href="facebook.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-facebook-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sotial-item">
+                    <a href="linkedin.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-linkedin-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-item">
@@ -160,6 +213,36 @@
               <div class="text-under-team-list">
                 <h3 class="h3-studio">Tom&nbsp;Ford</h3>
                 <p class="our-team-p">Frontend&nbsp;Developer</p>
+                <ul class="sotial-list">
+                  <li class="sotial-item">
+                    <a href="https://instagram.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-instagram-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sotial-item">
+                    <a href=" twitter.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-twitter-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sotial-item">
+                    <a href="facebook.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-facebook-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sotial-item">
+                    <a href="linkedin.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-linkedin-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-item">
@@ -172,6 +255,36 @@
               <div class="text-under-team-list">
                 <h3 class="h3-studio">Camila&nbsp;Garcia</h3>
                 <p class="our-team-p">Marketing</p>
+                <ul class="sotial-list">
+                  <li class="sotial-item">
+                    <a href="https://instagram.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-instagram-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sotial-item">
+                    <a href=" twitter.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-twitter-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sotial-item">
+                    <a href="facebook.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-facebook-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sotial-item">
+                    <a href="linkedin.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-linkedin-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-item">
@@ -184,7 +297,80 @@
               <div class="text-under-team-list">
                 <h3 class="h3-studio">Daniel&nbsp;Wilson</h3>
                 <p class="our-team-p">UI&nbsp;Designer</p>
+                <ul class="sotial-list">
+                  <li class="sotial-item">
+                    <a href="https://www.instagram.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-instagram-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sotial-item">
+                    <a href="https://www.twitter.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-twitter-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sotial-item">
+                    <a href="https://www.facebook.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-facebook-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="sotial-item">
+                    <a href="https://www.linkedin.com" class="sotial-link">
+                      <svg class="sotial-icons" width="16" height="16">
+                        <use href="./img/icons.svg#icon-linkedin-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section customers">
+        <div class="container">
+          <h2 class="title-studio">Customers</h2>
+          <ul class="customers-list">
+            <li>
+              <a class="customers-links" href=""
+                ><svg class="customers-icons" width="104" height="56">
+                  <use href="./img/icons.svg#icon-Logo"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a class="customers-links new" href=""
+                ><svg class="customers-icons" width="104" height="56">
+                  <use href="./img/icons.svg#icon-Logo-1"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a class="customers-links" href=""
+                ><svg class="customers-icons" width="104" height="56">
+                  <use href="./img/icons.svg#icon-Logo-2"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a class="customers-links" href=""
+                ><svg class="customers-icons" width="104" height="56">
+                  <use href="./img/icons.svg#icon-Logo-3"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a class="customers-links" href=""
+                ><svg class="customers-icons" width="104" height="56">
+                  <use href="./img/icons.svg#icon-Logo-4"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a class="customers-links" href=""
+                ><svg class="customers-icons" width="104" height="56">
+                  <use href="./img/icons.svg#icon-Logo-5"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
@@ -192,16 +378,52 @@
     </main>
     <!-- Footer -->
     <footer class="footer-menu">
-      <div class="container">
-        <a href="index.html" class="logo-link">
-          <span class="logo-web">WEB</span
-          ><span class="logo-studio-footer">STUDIO</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and <br />
-          sales for your business with digital <br />
-          marketing & growth solutions.
-        </p>
+      <div class="container footer">
+        <div>
+          <a href="index.html" class="logo-link-footer">
+            <span class="logo-web">WEB</span
+            ><span class="logo-studio-footer">STUDIO</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and <br />
+            sales for your business with digital <br />
+            marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-media-cont">
+          <h3 class="footer-link-header">Social media</h3>
+          <ul class="sotial-list">
+            <li class="sotial-item">
+              <a href="https://instagram.com" class="sotial-link footer">
+                <svg class="sotial-icons" width="24" height="24">
+                  <use href="./img/icons.svg#icon-instagram-card"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sotial-item">
+              <a href=" twitter.com" class="sotial-link footer">
+                <svg class="sotial-icons" width="24" height="24">
+                  <use href="./img/icons.svg#icon-twitter-card"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sotial-item">
+              <a href="facebook.com" class="sotial-link footer">
+                <svg class="sotial-icons" width="24" height="24">
+                  <use href="./img/icons.svg#icon-facebook-card"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sotial-item">
+              <a href="linkedin.com" class="sotial-link footer">
+                <svg class="sotial-icons" width="24" height="24">
+                  <use href="./img/icons.svg#icon-linkedin-card"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
