--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
               </li>
               <li class="list-item">
                 <button type="button" class="button-portfolio">
-                  Web&nbsp;Site
+                  Web Site
                 </button>
               </li>
               <li class="list-item">
@@ -184,16 +184,52 @@
 
       <!-- Footer -->
       <footer class="footer-menu">
-        <div class="container">
-          <a href="index.html" class="logo-link">
-            <span class="logo-web">WEB</span
-            ><span class="logo-studio-footer">STUDIO</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and <br />
-            sales for your business with digital <br />
-            marketing & growth solutions.
-          </p>
+        <div class="container footer">
+          <div>
+            <a href="index.html" class="logo-link-footer">
+              <span class="logo-web">WEB</span
+              ><span class="logo-studio-footer">STUDIO</span></a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and <br />
+              sales for your business with digital <br />
+              marketing & growth solutions.
+            </p>
+          </div>
+  
+          <div class="footer-media-cont">
+            <h3 class="footer-link-header">Social media</h3>
+            <ul class="sotial-list">
+              <li class="sotial-item">
+                <a href="https://instagram.com" class="sotial-link footer">
+                  <svg class="sotial-icons" width="24" height="24">
+                    <use href="./img/icons.svg#icon-instagram-card"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sotial-item">
+                <a href=" twitter.com" class="sotial-link footer">
+                  <svg class="sotial-icons" width="24" height="24">
+                    <use href="./img/icons.svg#icon-twitter-card"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sotial-item">
+                <a href="facebook.com" class="sotial-link footer">
+                  <svg class="sotial-icons" width="24" height="24">
+                    <use href="./img/icons.svg#icon-facebook-card"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sotial-item">
+                <a href="linkedin.com" class="sotial-link footer">
+                  <svg class="sotial-icons" width="24" height="24">
+                    <use href="./img/icons.svg#icon-linkedin-card"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </footer>
     </main>
