--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,9 @@
             <li class="list-item">
               <a class="navi-link current" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="list-item"><a class="navi-link" href="">Contacts</a></li>
+            <li class="list-item">
+              <a class="navi-link" href="">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="address-menu">
@@ -64,9 +66,7 @@
                 <button type="button" class="button-portfolio">All</button>
               </li>
               <li class="list-item">
-                <button type="button" class="button-portfolio">
-                  Web Site
-                </button>
+                <button type="button" class="button-portfolio">Web Site</button>
               </li>
               <li class="list-item">
                 <button type="button" class="button-portfolio">App</button>
@@ -86,97 +86,125 @@
 
           <ul class="our-works-list">
             <li class="list-item">
-              <img
-                src="./img/img1.jpg"
-                alt="Online Banking"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-card-content">
-                <h2 class="h2-portfolio">Banking App Interface Concept</h2>
-                <p class="p-worklist">App</p>
-              </div>
+              <a href="" class="port-link">
+                <img
+                  src="./img/img1.jpg"
+                  alt="Online Banking"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-card-content">
+                  <h2 class="h2-portfolio">Banking App Interface Concept</h2>
+                  <p class="p-worklist">App</p>
+                </div>
+              </a>
             </li>
             <li class="list-item">
-              <img src="./img/img2.jpg" alt="PayPal" width="360" height="300" />
-              <div class="portfolio-card-content">
-                <h2 class="h2-portfolio">Cashless Payment</h2>
-                <p class="p-worklist">Marketing</p>
-              </div>
+              <a href="" class="port-link">
+                <img
+                  src="./img/img2.jpg"
+                  alt="PayPal"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-card-content">
+                  <h2 class="h2-portfolio">Cashless Payment</h2>
+                  <p class="p-worklist">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="list-item">
-              <img
-                src="./img/img3.jpg"
-                alt="Noutbook and Phone"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-card-content">
-                <h2 class="h2-portfolio">Meditaion App</h2>
-                <p class="p-worklist">App</p>
-              </div>
+              <a href="" class="port-link">
+                <img
+                  src="./img/img3.jpg"
+                  alt="Noutbook and Phone"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-card-content">
+                  <h2 class="h2-portfolio">Meditaion App</h2>
+                  <p class="p-worklist">App</p>
+                </div>
+              </a>
             </li>
             <li class="list-item">
-              <img
-                src="./img/img4.jpg"
-                alt="Cardriver"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-card-content">
-                <h2 class="h2-portfolio">Taxi Service</h2>
-                <p class="p-worklist">Marketing</p>
-              </div>
+              <a href="" class="port-link">
+                <img
+                  src="./img/img4.jpg"
+                  alt="Cardriver"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-card-content">
+                  <h2 class="h2-portfolio">Taxi Service</h2>
+                  <p class="p-worklist">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="list-item">
-              <img src="./img/img5.jpg" alt="Phone" width="360" height="300" />
-              <div class="portfolio-card-content">
-                <h2 class="h2-portfolio">Screen Illustrations</h2>
-                <p class="p-worklist">Design</p>
-              </div>
+              <a href="" class="port-link">
+                <img
+                  src="./img/img5.jpg"
+                  alt="Phone"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-card-content">
+                  <h2 class="h2-portfolio">Screen Illustrations</h2>
+                  <p class="p-worklist">Design</p>
+                </div>
+              </a>
             </li>
             <li class="list-item">
-              <img src="./img/img6.jpg" alt="Girl" width="360" height="300" />
-              <div class="portfolio-card-content">
-                <h2 class="h2-portfolio">Online Courses</h2>
-                <p class="p-worklist">Marketing</p>
-              </div>
+              <a href="" class="port-link">
+                <img src="./img/img6.jpg" alt="Girl" width="360" height="300" />
+                <div class="portfolio-card-content">
+                  <h2 class="h2-portfolio">Online Courses</h2>
+                  <p class="p-worklist">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="list-item">
-              <img
-                src="./img/img7.jpg"
-                alt="Designer"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-card-content">
-                <h2 class="h2-portfolio">Instagram Stories Concept</h2>
-                <p class="p-worklist">Design</p>
-              </div>
+              <a href="" class="port-link">
+                <img
+                  src="./img/img7.jpg"
+                  alt="Designer"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-card-content">
+                  <h2 class="h2-portfolio">Instagram Stories Concept</h2>
+                  <p class="p-worklist">Design</p>
+                </div>
+              </a>
             </li>
             <li class="list-item">
-              <img
-                src="./img/img8.jpg"
-                alt="Fresh food"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-card-content">
-                <h2 class="h2-portfolio">Organic Food</h2>
-                <p class="p-worklist">Web Site</p>
-              </div>
+              <a href="" class="port-link">
+                <img
+                  src="./img/img8.jpg"
+                  alt="Fresh food"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-card-content">
+                  <h2 class="h2-portfolio">Organic Food</h2>
+                  <p class="p-worklist">Web Site</p>
+                </div>
+              </a>
             </li>
             <li class="list-item">
-              <img
-                src="./img/img9.jpg"
-                alt="Coffe whith milk"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-card-content">
-                <h2 class="h2-portfolio">Fresh Coffee</h2>
-                <p class="p-worklist">Web Site</p>
-              </div>
+              <a href="" class="port-link">
+                <img
+                  src="./img/img9.jpg"
+                  alt="Coffe whith milk"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-card-content">
+                  <h2 class="h2-portfolio">Fresh Coffee</h2>
+                  <p class="p-worklist">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -196,9 +224,9 @@
               marketing & growth solutions.
             </p>
           </div>
-  
+
           <div class="footer-media-cont">
-            <h3 class="footer-link-header">Social media</h3>
+            <p class="media-paragraph">Social media</p>
             <ul class="sotial-list">
               <li class="sotial-item">
                 <a href="https://instagram.com" class="sotial-link footer">
