--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <li class="list-item">
               <a class="navi-link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="list-item"><a class="navi-link" href="">Contacts</a></li>
+            <li class="list-item">
+              <a class="navi-link" href="">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="address-menu">
@@ -339,37 +341,37 @@
             <li>
               <a class="customers-links" href=""
                 ><svg class="customers-icons" width="104" height="56">
-                  <use href="./img/icons.svg#icon-Logo"></use></svg
-              ></a>
-            </li>
-            <li>
-              <a class="customers-links new" href=""
-                ><svg class="customers-icons" width="104" height="56">
-                  <use href="./img/icons.svg#icon-Logo-1"></use></svg
+                  <use href="./img/icons.svg#icon-group"></use></svg
               ></a>
             </li>
             <li>
               <a class="customers-links" href=""
                 ><svg class="customers-icons" width="104" height="56">
-                  <use href="./img/icons.svg#icon-Logo-2"></use></svg
+                  <use href="./img/icons.svg#icon-group-1"></use></svg
               ></a>
             </li>
             <li>
               <a class="customers-links" href=""
                 ><svg class="customers-icons" width="104" height="56">
-                  <use href="./img/icons.svg#icon-Logo-3"></use></svg
+                  <use href="./img/icons.svg#icon-group-2"></use></svg
               ></a>
             </li>
             <li>
               <a class="customers-links" href=""
                 ><svg class="customers-icons" width="104" height="56">
-                  <use href="./img/icons.svg#icon-Logo-4"></use></svg
+                  <use href="./img/icons.svg#icon-group-3"></use></svg
               ></a>
             </li>
             <li>
               <a class="customers-links" href=""
                 ><svg class="customers-icons" width="104" height="56">
-                  <use href="./img/icons.svg#icon-Logo-5"></use></svg
+                  <use href="./img/icons.svg#icon-group-4"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a class="customers-links" href=""
+                ><svg class="customers-icons" width="104" height="56">
+                  <use href="./img/icons.svg#icon-group-5"></use></svg
               ></a>
             </li>
           </ul>
@@ -392,7 +394,7 @@
         </div>
 
         <div class="footer-media-cont">
-          <h3 class="footer-link-header">Social media</h3>
+          <p class="media-paragraph">Social media</p>
           <ul class="sotial-list">
             <li class="sotial-item">
               <a href="https://instagram.com" class="sotial-link footer">
